# IRPF-CORR

./: .gitignore  bonificacoes_resultados.txt  fatos_relevantes_filtrados.json  filtered_material_facts.json  generate_tsv.py  main.py  planilha.tsv  pyproject.toml
docs/adr/: 0001-plain-simple-kiss-no-hexagonal.md  0002-centralized-constants-and-global-variables.md
docs/pdf/AGRO3/dados_economico_financeiros/: 2025-12-dados_economico_financeiros+demonstracoes_financeiras_anuais_completas-fato_relevante_1499119.txt
src/irpf_b3/: __init__.py  all_companies.json  classifier.py  companies.json  companies.py  config.py  documents.py  evaluate_bonificacoes.py  fatos_relevantes_filtrados.json  helpers.py  main.py  scanner.py  scraper.py  tickers.txt
src/irpf_b3/legacy/: evaluate_bonuses.py  llm_client.py  scan_corporate_events.py  scraper.py
src/irpf_corr/: calculator.py  models.py  portfolio.py  ptax.py
tests/: test_calculator.py  test_companies.py  test_evaluate_bonificacoes.py  test_models.py  test_portfolio.py  test_scraper_retroactive.py
