[project]
name = "irpf-corr"
version = "0.1.0"
description = "Average Stock Price Calculator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pdf2image>=1.17.0",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.3",
    "unidecode>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

